--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ header .headline{
   margin: 0 auto;
 }
 .nav-list-item {
-  list-style: none;   
+  list-style: none;
   display: inline-block;
   margin: 0 20px;
 }
@@ -35,23 +35,71 @@ header .headline{
   width: 100%;
   height: 300px;
   background-image: url(img/mv.jpg);
-  background-size: cover;}
-.main-visual-content{
-  width: 350px;
-  height: 300px;
+  background-size: cover;
+  background-position: center;
 }
-.main {
-  width: 840px;
+.main-visual-content{
+  width: 40%;
+  height: 300px;
+  background-color: rgba( 0, 0, 0, 0.5);
+  text-align: center;
+  padding-top: 105px;
+}
+.main-visual-text{
+	color: #fff;
+}
+.main-visual-name{
+	margin-top: 30px;
+	color: #fff;
+}
+main {
+  width: 800px;
   margin: 0 auto;
+  padding: 70px 0;
 }
 .blog {
-  width: 600px;
-  height: 1400px;
+  width: 540px;
   float: left;
+  margin-right: 30px;
+}
+.blog-box {
+	padding-top: 50px;
+}
+.blog-headline {
+	border-bottom: 8px solid #f7f7f7;
+	text-align: center;
+	line-height: 0.6
+}
+.blog-item{
+	padding-bottom: 20px;
+	margin-bottom: 20px;
+	border-bottom: 1px solid #f7f7f7;
+}
+.blog-image{
+	height: 180px;
+	float: left;
+}
+.blog-text{
+	float: left;
+	padding: 30px 0px 0px 25px;
+}
+.blog-text-headline {
+	padding-bottom: 15px;
+}
+.blog-date {
+	font-size: 12px;
+	display: inline-block;
+}
+.category {
+	display: inline-block;
+	padding: 5px 8px;
+	background-color: #acabab;
+	border-radius: 3px;
+	color: #fff;
+	font-size: 11px;
 }
 .sidebar {
-  width: 240px;
-  height: 1400px;
+  width: 230px;
   float: left;
 }
 footer {
