--- a/ex9.css
+++ b/ex9.css
@@ -62,3 +62,16 @@ footer {
 	background-color: #AAAAAA;
 	width: 100%;
 }
+@media screen and (max-width: 768px) {
+	main {
+		width: 100%;
+	}
+	.main-content {
+		float: none;
+		width: 90%;
+		margin:20px auto;
+	}
+	.main-content:last-child {
+	margin-right:auto;
+	}
+}
